# XACQ

./: .gitignore  README.md  pom.xml  requirements.txt
binsecplugin/pathpredicate/: dune  dune-project  env.ml  exepath.ml  libexepath.opam
datasets/binaries/: crypt_and_hash
datasets/binaries/tinyusb/: tusb.elf
datasets/binsec_ini/mbed/: mbedtls_aes_crypt_cbc.ini  mbedtls_aes_setkey_dec.ini  mbedtls_aes_setkey_enc.ini  mbedtls_md_finish.ini  mbedtls_md_hmac_finish.ini  mbedtls_md_hmac_starts.ini  mbedtls_md_hmac_update.ini  mbedtls_md_setup.ini  mbedtls_md_starts.ini  mbedtls_md_update.ini
datasets/binsec_ini/tinyusb/: tu_desc_get_interface_total_len.ini  tu_edpt_stream_init.ini  tu_edpt_validate.ini  tu_fifo_config.ini  tu_fifo_count.ini  tu_fifo_remaining.ini  tusb_rhport_init.ini
datasets/configs/ruleml/: AllNotNull.txt  array_init_pair_symmetr_nopost.txt  bzero.txt  fact.txt  fibo.txt  find_first.txt  gcd.txt  glibc_memchr.txt  glibc_memcmp.txt  glibc_memfrob.txt  glibc_memrchr.txt  glibc_memset.txt  glibc_strchr.txt  glibc_strchrnul.txt  glibc_strcmp.txt  glibc_strlen.txt  glibc_strncmp.txt  inc.txt  maxvalue.txt  memccpy.txt  memcpy.txt  memmem.txt  memmove.txt  (+33 more)
examples/: boucle  boucle.c  boucle.ini  boucle.txt  mvswap.txt  strcat_econacq.txt  struct  struct.c  struct.ini  struct.txt
resources/: permissions32.config  permissions64.config
scripts/: bench.py  launch_preca.sh
stats/: Quality.xlsx  conacq_lvl1.xlsx  conacq_lvl2.xlsx  conacq_lvl3.xlsx  negative_queries.xlsx  positive_queries.xlsx  xconacq_lvl1.xlsx  xconacq_lvl2.xlsx  xconacq_lvl3.xlsx
(+179 files in other folders)
